--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Demo and code plugin for vuepress">
     <link rel="icon" href="/vuepress-plugin-demo-code/favicon.ico">
     
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.03b53205.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.5d767c0b.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/4.779a46b7.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.772f9453.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.7862ed72.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.d6e4a188.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/6.7005bf9c.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.89974d4b.js">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.03b53205.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.8a61e8d2.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/4.aa486a21.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.5751d0d6.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.7862ed72.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.7649c8ea.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/6.67e75b2a.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.89974d4b.js">
     <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.03b53205.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.5d767c0b.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/4.779a46b7.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.8a61e8d2.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/4.aa486a21.js" defer></script>
   </body>
 </html>
