--- a/404.html
+++ b/404.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>vuepress-plugin-demo-code</title>
-    <meta name="description" content="Demo and code plugin for vuepress">
+    <meta name="description" content="📝 Demo and code plugin for vuepress">
     <link rel="icon" href="/vuepress-plugin-demo-code/favicon.ico">
     
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.03b53205.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.8a61e8d2.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/4.aa486a21.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.5751d0d6.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.7862ed72.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.7649c8ea.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/6.67e75b2a.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.89974d4b.js">
-    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.03b53205.css">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.113713b3.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.afcb60ed.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/4.e34f40af.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.11b09fe7.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.0dc68db1.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.72419df5.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/6.6dbe33f2.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.60c20dd9.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.a4f28d3a.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.80512288.js">
+    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.113713b3.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.8a61e8d2.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/4.aa486a21.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.afcb60ed.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/4.e34f40af.js" defer></script>
   </body>
 </html>
