--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="📝 Demo and code plugin for vuepress">
     <link rel="icon" href="/vuepress-plugin-demo-code/favicon.ico">
     
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.113713b3.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.a93e2939.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/4.e34f40af.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.11b09fe7.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.0dc68db1.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.2ed97afa.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/6.6dbe33f2.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.dc2cb5b0.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.a4f28d3a.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.80512288.js">
-    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.113713b3.css">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.74decaf3.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.e3166ad0.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/4.813507db.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.2b717d65.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.0b530297.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.3877502f.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/6.839ce8ef.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.560f29fd.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.8fa5808f.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.0327d666.js">
+    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.74decaf3.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.a93e2939.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/4.e34f40af.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.e3166ad0.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/4.813507db.js" defer></script>
   </body>
 </html>
