--- a/404.html
+++ b/404.html
@@ -6,12 +6,13 @@
     <title>vuepress-plugin-demo-code</title>
     <meta name="description" content="📝 Demo and code plugin for vuepress">
     <link rel="icon" href="/vuepress-plugin-demo-code/favicon.ico">
+  <link rel="stylesheet" href="https://unpkg.com/animate.css@3.7.0/animate.min.css">
     
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.74decaf3.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.e3166ad0.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/4.813507db.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.2b717d65.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.0b530297.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.3877502f.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/6.839ce8ef.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.560f29fd.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.8fa5808f.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.0327d666.js">
-    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.74decaf3.css">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.9aa92555.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.587db156.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.65b67cec.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.23d89f1d.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.faf1e198.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.37ecb227.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.031c8647.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.04831b29.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.b14eebd3.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.0327d666.js">
+    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.9aa92555.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.e3166ad0.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/4.813507db.js" defer></script>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.587db156.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.65b67cec.js" defer></script>
   </body>
 </html>
