--- a/404.html
+++ b/404.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="/vuepress-plugin-demo-code/favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/animate.css@3.7.0/animate.min.css">
     
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.9aa92555.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.ea5c3037.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.b4b385ba.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.3094cc76.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.b16b3301.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.9a52f4ab.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.3ed13a4b.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.27b83091.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.46077aa0.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.7561a72e.js">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.9aa92555.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.7a2da787.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.56b1da0a.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.908cbe88.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.7f66edb2.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.63c7209c.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.3d8e12c0.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.4f1aee10.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.eb417a42.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.fb14a3bf.js">
     <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.9aa92555.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.ea5c3037.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.b4b385ba.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.7a2da787.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.56b1da0a.js" defer></script>
   </body>
 </html>
