--- a/404.html
+++ b/404.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="/vuepress-plugin-demo-code/favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/animate.css@3.7.0/animate.min.css">
     
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.9aa92555.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.f4021b23.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.56b1da0a.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.908cbe88.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.a8ae78fe.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.22dd5067.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.3d8e12c0.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.4c6dc099.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.72fd926d.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.fb14a3bf.js">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.9aa92555.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.ad562e8b.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.50153d6c.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.9f86579c.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.518bb6ed.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.bdccd829.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.8aec5895.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.f1d9dfc3.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.7a5f8b5b.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.c1135ef6.js">
     <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.9aa92555.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.f4021b23.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.56b1da0a.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.ad562e8b.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.50153d6c.js" defer></script>
   </body>
 </html>
