--- a/404.html
+++ b/404.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="/vuepress-plugin-demo-code/favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/animate.css@3.7.0/animate.min.css">
     
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.582b7c84.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.17b2a3b3.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.276b1d16.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.79af133d.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.4766065e.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.170d7a94.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.37dc4578.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.f392dc3b.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.d3582362.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.004ff7db.js">
-    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.582b7c84.css">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.69aa0f37.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.c84af484.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.276b1d16.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.79af133d.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.4766065e.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.170d7a94.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.37dc4578.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.f392dc3b.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.d3582362.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.004ff7db.js">
+    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.69aa0f37.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.17b2a3b3.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.276b1d16.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.c84af484.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.276b1d16.js" defer></script>
   </body>
 </html>
