--- a/404.html
+++ b/404.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="/vuepress-plugin-demo-code/favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/animate.css@3.7.0/animate.min.css">
     
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.cdaf5264.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.305db319.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.5d1b6c46.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.96428768.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.b755e3e2.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.6ae5053d.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.2b56daab.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.fc35e8b4.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.bfc82032.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.eb965841.js">
-    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.cdaf5264.css">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.925129cf.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.cefd6f26.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.8b77e4b5.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.8980eeb2.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.8bb26ab0.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.787f13e1.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.29fb505a.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.12a5f8d3.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.fd643426.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.4e38f3de.js">
+    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.925129cf.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.305db319.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.5d1b6c46.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.cefd6f26.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.8b77e4b5.js" defer></script>
   </body>
 </html>
