--- a/404.html
+++ b/404.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="/vuepress-plugin-demo-code/favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/animate.css@3.7.0/animate.min.css">
     
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.f473af8b.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.734d60c5.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.4996df47.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.0e4b7824.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.b081a217.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.abb71f41.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.29fb505a.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.fd2a0e73.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.a583d864.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.4e38f3de.js">
-    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.f473af8b.css">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.4faaffb1.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.942cbe1d.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.84e125e5.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.4c0259e8.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.68998585.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.8559773b.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.29fb505a.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.b5b7ce8e.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.96f2c09b.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.4e38f3de.js">
+    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.4faaffb1.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.734d60c5.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.4996df47.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.942cbe1d.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.84e125e5.js" defer></script>
   </body>
 </html>
