--- a/404.html
+++ b/404.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="/vuepress-plugin-demo-code/favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/animate.css@3.7.0/animate.min.css">
     
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.4faaffb1.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.942cbe1d.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.84e125e5.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.4c0259e8.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.68998585.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.8559773b.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.29fb505a.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.b5b7ce8e.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.96f2c09b.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.4e38f3de.js">
-    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.4faaffb1.css">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.8fc271e9.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.dfdda6e7.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.6c946f9f.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.7cfab191.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.5a07d641.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.93a7e43f.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.17f26173.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.2b94305e.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.510e877c.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.ddee87fa.js">
+    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.8fc271e9.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.942cbe1d.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.84e125e5.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.dfdda6e7.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.6c946f9f.js" defer></script>
   </body>
 </html>
