--- a/404.html
+++ b/404.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="/vuepress-plugin-demo-code/favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/animate.css@3.7.0/animate.min.css">
     
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.8fc271e9.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.dfdda6e7.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.6c946f9f.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.7cfab191.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.5a07d641.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.93a7e43f.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.17f26173.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.2b94305e.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.510e877c.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.ddee87fa.js">
-    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.8fc271e9.css">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.f8d2fb5b.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.627f1510.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.eb2a7eb0.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.610a8d82.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.7616ca5f.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.4303f28b.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.ecc8b35a.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.529871d3.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.1435e240.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.ddee87fa.js">
+    <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.f8d2fb5b.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.dfdda6e7.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.6c946f9f.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.627f1510.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.eb2a7eb0.js" defer></script>
   </body>
 </html>
