--- a/404.html
+++ b/404.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="/vuepress-plugin-demo-code/favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/animate.css@3.7.0/animate.min.css">
     
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.618b2837.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.18509d1a.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.28121946.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.eeb112db.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.3a014e05.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.3daad4c7.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.a971b007.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.c00b6a0f.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.b3fc457f.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.655c0f6a.js">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.618b2837.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.29b9ac80.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.28121946.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.eeb112db.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.3a014e05.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.3daad4c7.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.a971b007.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.c00b6a0f.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.b3fc457f.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.655c0f6a.js">
     <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.618b2837.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.18509d1a.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.28121946.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.29b9ac80.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.28121946.js" defer></script>
   </body>
 </html>
