--- a/404.html
+++ b/404.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="/vuepress-plugin-demo-code/favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/animate.css@3.7.0/animate.min.css">
     
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.2cffb1f8.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.eeb8f76b.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.4209e1b8.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.b9c86479.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.bfabe4df.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.5932bb71.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.2f847577.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.08edf1d4.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.35df85a4.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.c5107f3e.js">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.2cffb1f8.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.22cab05f.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.4209e1b8.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.b9c86479.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.bfabe4df.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.5932bb71.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.e4eb0c3b.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.08edf1d4.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.adbb1895.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.c5107f3e.js">
     <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.2cffb1f8.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.eeb8f76b.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.4209e1b8.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.22cab05f.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.4209e1b8.js" defer></script>
   </body>
 </html>
