--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     <link rel="icon" href="/vuepress-plugin-demo-code/favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/animate.css@3.7.0/animate.min.css">
     <meta name="description" content="📝 Demo and code plugin for vuepress">
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.82301157.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.27f8c0ba.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.ff2efc59.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.d122cef7.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.6ccbb303.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.870a74bd.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.d620998b.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.0976ad87.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.34684473.js">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.82301157.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.cccfa511.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/6.a0c8b36f.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.1a09e648.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.a3cca979.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.803a2c06.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.47e5be9d.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.10cb1670.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/8.f471c0bb.js">
     <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.82301157.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.27f8c0ba.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.ff2efc59.js" defer></script>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.cccfa511.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/6.a0c8b36f.js" defer></script>
   </body>
 </html>
