--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://unpkg.com/animate.css@3.7.0/animate.min.css">
     <meta name="description" content="📝 Demo and code plugin for vuepress">
     
-    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.e41139f4.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.8020b598.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/8.a1f91bdf.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/10.e68660e6.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.063184b4.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.441f0d84.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.51d747ca.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.8f01c324.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/6.0a795b44.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.e841e35c.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.70940e11.js">
+    <link rel="preload" href="/vuepress-plugin-demo-code/assets/css/0.styles.e41139f4.css" as="style"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/app.ac6eec4b.js" as="script"><link rel="preload" href="/vuepress-plugin-demo-code/assets/js/8.a1f91bdf.js" as="script"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/10.e68660e6.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/2.063184b4.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/3.441f0d84.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/4.51d747ca.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/5.8f01c324.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/6.0a795b44.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/7.e841e35c.js"><link rel="prefetch" href="/vuepress-plugin-demo-code/assets/js/9.70940e11.js">
     <link rel="stylesheet" href="/vuepress-plugin-demo-code/assets/css/0.styles.e41139f4.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-plugin-demo-code/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-demo-code/assets/js/app.8020b598.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/8.a1f91bdf.js" defer></script>
+    <script src="/vuepress-plugin-demo-code/assets/js/app.ac6eec4b.js" defer></script><script src="/vuepress-plugin-demo-code/assets/js/8.a1f91bdf.js" defer></script>
   </body>
 </html>
